hard-gists/1486762/run.log
=== Docker Run Log for 1486762 ===
Started at: Mi 29. Okt 12:15:29 CET 2025

[2025-10-29 12:15:29] START: Running container for 1486762
[2025-10-29 12:15:30] SUCCESS: Container 7edc991e2548c307034bee1b2e7b4a07f3e0c223bb1b63fa7a809fef066be1f3 started for 1486762
=== Container logs for 1486762 ===
  File "/snippet.py", line 148
    print "Enter %s (%s): " % (key, value)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1486762 ===
[2025-10-29 12:15:32] INFO: Container 7edc991e2548c307034bee1b2e7b4a07f3e0c223bb1b63fa7a809fef066be1f3 has stopped
